tests/query_errors/scope_named_scripts2/error.txt
Error: 
    3 |   signed::MIN
      |   ^^^^^^^^^^^ The constant signed::MIN (absolute path) is not defined.